user deeletion for postman tests
